--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,20 @@
     --color-bg-jumbotron:#CCDBDD;
 }
 
+*
+{
+    font-family: 'Quicksand', sans-serif;
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .subscribe
 {
     background: var(--color-bg-jumbotron);
@@ -23,11 +37,24 @@ font-weight:bolder;
 font-size:50px;
 }
 
-h3
+@media screen and (max-width: 320px)
+{
+h1, h2
 {
 font-family: "fredoka one";
 color: var(--color-bg-button);
+font-weight: bolder;
+font-size:27px;
+text-align: center;
+}
+}
+
+h3
+{
+font-family: arial-black;
+color: var(--color-bg-button);
 font-weight:bolder;
+font-style: regular;
 font-size:40px;
 }
 
@@ -35,6 +62,12 @@ h6
 {
  font-weight:bold;
  font-size:16px;
+}
+
+p
+{
+    font-family: sitka;
+    font-size: 20px;
 }
 
 ul, li
@@ -71,18 +104,20 @@ background:var(--color-bg-banner);
 .jumbotron
 {
     background: var(--color-bg-jumbotron);
-    border-radius: 30px;"
+    border-radius: 30px;
 }
 
 .navButton
 {
 background: var(--color-bg-button);
-background-color: #00004C;
 color:#fff;
+padding: 16px 20px;
 }
 
 .nav-item a {
 color: var(--color-text-navigation);
+font-family: urbanist;
+font-style: semibold;
 }
 
 .navbar .navbar-nav .nav-item a {
@@ -92,7 +127,12 @@ color: var(--color-text-navigation);
 .navbar .navbar-nav .nav-item:hover {
     border-bottom: 2px solid var(--color-link-navigation);
 }
-.nav-btn .nav-item li{
+
+header
+{
+    width:100%;
+}
+/* .nav-btn .nav-item li{
     list-style: none;
   }
 
@@ -107,13 +147,30 @@ color: var(--color-text-navigation);
     font-size: 1rem;
     padding: 0.5rem;
     border-radius: 50%;
-  }
+  } */
 
   .navButton:hover
   {
    background: var(--color-link-hover-navigation);
    color: #fff;
   }
+
+  .demo
+  {
+
+   padding: 16px 20px;
+}
+
+
+@media screen and (max-width: 320px)
+{
+  .demo
+  {
+   width:80%;
+   margin-top:10px;
+  }
+}
+
 
   .demo:hover
   {
@@ -125,11 +182,12 @@ color: var(--color-text-navigation);
     border-bottom: 2px solid var(--color-link-navigation);
 } */
 
+
 .container__header .nav-item li{
     list-style: none;
   }
 
-  .nav-btn .nav-item {
+  /* .nav-btn .nav-item {
     align-items: center;
     gap: 1rem;
   }
@@ -140,4 +198,11 @@ color: var(--color-text-navigation);
     font-size: 1rem;
     padding: 0.5rem;
     border-radius: 50%;
+  } */
+
+
+  .subscribe-btn
+  {
+    background: var(--color-bg-button);
+    color:#fff;
   }
