--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,19 +29,25 @@ body{
     text-align: left;
 }
 
+span
+{
+font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 h1, h2
 {
-font-family: "fredoka one";
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+/* font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial Narrow Bold', sans-serif; */
 color: var(--color-bg-button);
 font-weight:bolder;
-font-size:50px;
+font-size:52px;
 }
 
 @media screen and (max-width: 320px)
 {
 h1, h2
 {
-font-family: "fredoka one";
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 color: var(--color-bg-button);
 font-weight: bolder;
 font-size:27px;
@@ -49,14 +55,33 @@ text-align: center;
 }
 }
 
-h3
+@media screen and (max-width: 320px)
+{
+.achieve
+{
+    font-size: 10px;
+    text-align: center;
+}
+}
+
+h4
 {
 font-family: arial-black;
 color: var(--color-bg-button);
 font-weight:bolder;
 font-style: regular;
-font-size:40px;
+font-size:31px;
 }
+
+h3
+{
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+color: var(--color-bg-button);
+font-style: regular;
+font-weight: bolder;
+font-size:35px;
+}
+
 
 h6
 {
@@ -66,13 +91,13 @@ h6
 
 p
 {
-    font-family: sitka;
+    font: sitka;
     font-size: 20px;
 }
 
 ul, li
 {
-    font-family: "fredoka one";
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: var(--color-bg-button);
     font-weight: bold;
 
@@ -82,7 +107,7 @@ ul, li
 {
 h1, h2, h3
 {
-font-family: fredoka one;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 color: var(--color-bg-button);
 font-weight: bold;
 font-size:30px;
@@ -114,6 +139,10 @@ color:#fff;
 padding: 16px 20px;
 }
 
+.pricingcolor
+{
+    color: #454545;
+}
 .nav-item a {
 color: var(--color-text-navigation);
 font-family: urbanist;
@@ -206,3 +235,22 @@ header
     background: var(--color-bg-button);
     color:#fff;
   }
+
+
+
+  .outer-square {
+    width: 25px;
+    height: 25px;
+    border: 2px solid #004d40;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.inner-circle {
+    width: 12px; /* Adjust size to be half of the outer square */
+    height: 12px; /* Adjust size to be half of the outer square */
+    background-color: #004d40; /* The inner circle's color */
+    border-radius: 50%; /* To make it a perfect circle */
+}
