--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
 
 :root {
     --color-primary-button: #004A53;
@@ -31,9 +30,11 @@ body{
 
 h1
 {
+font-family:  Fredoka, serif;
 font-size:56px;
 line-height:61.6px;
-font-family: quicksand, sans-serif;
+font-weight: 400;
+font-style: normal;
 }
 
 
@@ -80,15 +81,27 @@ font-size:20px;
 line-height:22px;
 }
 
+@media (max-width: 400px)
+{
+  .button-container {
+    flex-wrap: wrap;
+    flex: 0 100%;
+  }
+}
+
+
 .primaryButton
 {
 width: 205px;
 height:60px;
 padding: 16px 20px;
+border-radius:4px;
 background: var(--color-primary-button);
 color:#fff;
 font-size: 14px;
 }
+
+
 
 .primaryButton:hover
 {
@@ -122,14 +135,27 @@ font-size: 14px;
     height: 27px;
 }
 
-.nav-item .nav-link
+ .nav-link
 {
-font-family: "Medium Text Regular", sitka;
+font-family:  "sitka text", serif;
 font-size: 12px;
 font-weight:300;
 letter-spacing: 1%;
-/* text-transform: none !important; */
-color: red;
+text-transform: none !important;
+}
+
+.navbar .navbar-nav .nav-item:hover {
+    border-bottom: 2px solid var(--color-link-navigation);
+}
+
+a.nav-link
+{
+    text-transform: none !important;
+}
+
+a.nav-link:hover
+{
+    color: var(--color-primary-hover-button);
 }
 
 a.nav-link.active
@@ -137,10 +163,13 @@ a.nav-link.active
     font-weight: 600;
 }
 
-/* .navbar-nav .nav-link, .navbar-nav .nav-link.active, .navbar-nav .nav-link.dropdown-toggle {
-    text-transform: none !important;
-    letter-spacing: normal !important;
-  } */
+.nav-item li{
+    width:64px;
+    height: 27px;
+  }
+
+
+
 
 .subscribe
 {
@@ -236,12 +265,41 @@ color: #4D525F;
 background:var(--color-bg-banner);
 font-size: 10px;
 font-family:Fredoka One;
-color: blue;
 }
 
-.banner .heroheading
+.heroheading
 {
-color: red;
+    font-family:  Fredoka, serif;
+    font-weight:bolder;
+    font-size: 48px;
+    line-height: 150%;
+    vertical-align: middle;
+    letter-spacing: 1%;
+}
+
+@media(max-width: 400px)
+{
+.heroheading
+{
+    font-size: 20px;
+}
+}
+
+.heroparagraph
+{
+    font-family: sitka, serif;
+    font-weight: 400;
+    font-size:16px;
+    vertical-align: middle;
+    letter-spacing: 1%;
+}
+
+@media(max-width: 400px)
+{
+    .heroparagraph
+    {
+        font-size: 12px;
+    }
 }
 
 .jumbotron
@@ -250,15 +308,6 @@ color: red;
     border-radius: 30px;
 }
 
-.navButton
-{
-background: var(--color-bg-button);
-color:#fff;
-padding: 16px 20px;
-font-family: sitka;
-width:259px;
-height: 60px;
-}
 
 .pricingcolor
 {
@@ -270,13 +319,7 @@ font-family: sitka;
 font-weight: normal;
 }
 
-.navbar .navbar-nav .nav-item a {
-    color: var(--color-primary);
-}
 
-.navbar .navbar-nav .nav-item:hover {
-    border-bottom: 2px solid var(--color-link-navigation);
-}
 
 header
 {
@@ -305,20 +348,10 @@ header
    color: #fff;
   }
 
-  .demo
-  {
-
-   padding-top: 16px;
-   padding-bottom: 16px;
-   padding-left: 20px;
-   padding-right: 20px;
-   font-family: sitka;
-   width:259px;
-   height: 60px;
-}
 
 
-@media screen and (max-width: 320px)
+
+/* @media screen and (max-width: 320px)
 {
   .demo
   {
@@ -334,7 +367,7 @@ header
    background: var(--color-bg-banner);
    color: #fff;
    font-family: sitka;
-  }
+  } */
 
 /* .container__header .nav-item:hover {
     border-bottom: 2px solid var(--color-link-navigation);
@@ -351,11 +384,7 @@ header
     font-family: sitka;
   }
 
-  .nav-item li{
-    font-family: sitka;
-    width:64px;
-    height: 27px;
-  }
+
 
   /* .nav-btn .nav-item {
     align-items: center;
@@ -398,3 +427,49 @@ header
 
 
 
+      /* .banner-text {
+            font-family: 'Poppins', sans-serif;
+            color: #045a5a;
+            font-size: clamp(1.2rem, 3vw, 2.5rem);
+            line-height: 1.2;
+        } */
+
+
+        .container__footer {
+            /* border-top: 1px solid var(--color-ash); */
+            background: #004A53;
+            margin-top: 2rem;
+            text-align: center;
+        }
+
+        .footer__container .row {
+            font-size: 0.8rem;
+            padding: 0.5rem 0;
+            justify-content: space-between;
+        }
+
+        .footer__container a {
+            text-decoration: none;
+            color: var(--color-bg-ash);
+        }
+
+        .footer__container a:hover {
+            text-decoration: none;
+            color: var(--color-primary-blue);
+        }
+
+
+
+ /* .bullet-point
+ {
+  width: 1rem;
+  height: 1rem;
+  background-color: #006064;
+  flex-shrink: 0;
+  margin-top: 0.25rem;
+} */
+
+
+/* .custom-shadow {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+} */
