--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -458,6 +458,18 @@ header
             color: var(--color-primary-blue);
         }
 
+.bg-container-fluid
+{
+    margin-top: 30px;
+    background-image: url('background.png');
+    background-repeat: no-repeat;
+    background-size: 100px;
+    text-align: center;
+    background-position: center center;
+    min-height: 300px;
+}
+
+
 
 
  /* .bullet-point
