--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -40,9 +40,44 @@ font-style: normal;
 
 h2
 {
+font-family:  Fredoka, serif;
+font-weight: bolder;
 font-size:48px;
 line-height:52.8px;
 }
+
+h3
+{
+font-family:  Fredoka, serif;
+font-weight: bolder;
+font-size:40px;
+line-height:44px;
+}
+
+h4
+{
+font-family:  Fredoka, serif;
+font-weight: bolder;
+font-size:32px;
+line-height:35.2px;
+}
+
+h5
+{
+font-family:  Fredoka, serif;
+font-weight: bolder;
+font-size:24px;
+line-height:26.4px;
+}
+
+h6
+{
+font-weight: bolder;
+font-family:  Fredoka, serif;
+font-size:20px;
+line-height:22px;
+}
+
 
 @media screen and (max-width: 320px)
 {
@@ -57,29 +92,7 @@ text-align: center;
 }
 
 
-h3
-{
-font-size:40px;
-line-height:44px;
-}
 
-h4
-{
-font-size:32px;
-line-height:35.2px;
-}
-
-h5
-{
-font-size:24px;
-line-height:26.4px;
-}
-
-h6
-{
-font-size:20px;
-line-height:22px;
-}
 
 @media (max-width: 400px)
 {
@@ -302,12 +315,22 @@ font-family:Fredoka One;
     }
 }
 
-.jumbotron
+.ourproduct1
 {
     background: var(--color-bg-jumbotron);
     border-radius: 30px;
+    top:50px;
+    left:100px;
 }
 
+
+.ourproduct2
+{
+    border: 1px solid #000;
+    margin-top:50px;
+    border-radius: 50px;
+    margin-bottom: 50px;
+}
 
 .pricingcolor
 {
@@ -461,12 +484,13 @@ header
 .bg-container-fluid
 {
     margin-top: 30px;
-    background-image: url('background.png');
+    /* background-image: url('background.png'); */
+    background-image: url("{{ Vite::asset('resources/css/images/background.png') }}");
     background-repeat: no-repeat;
     background-size: 100px;
     text-align: center;
-    background-position: center center;
     min-height: 300px;
+    background-color:red;
 }
 
 
