--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -215,30 +215,7 @@ font-style:regular;
 }
 }
 
-/* h4
-{
-font-family: arial-black;
-color: var(--color-bg-button);
-font-weight:bolder;
-font-style: regular;
-font-size:31px;
-}
 
-h3
-{
-font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-color: var(--color-bg-button);
-font-style: regular;
-font-weight: bolder;
-font-size:35px;
-}
-
-
-h6
-{
- font-weight:bold;
- font-size:16px;
-} */
 
 p
 {
@@ -321,6 +298,7 @@ font-family:Fredoka One;
     border-radius: 30px;
     top:50px;
     left:100px;
+    height: 400px;
 }
 
 
@@ -330,6 +308,7 @@ font-family:Fredoka One;
     margin-top:50px;
     border-radius: 50px;
     margin-bottom: 50px;
+    height: 400px;
 }
 
 .pricingcolor
@@ -483,14 +462,14 @@ header
 
 .bg-container-fluid
 {
-    margin-top: 30px;
+    /* margin-top: 30px; */
     /* background-image: url('../css/images/background.png'); */
     /* background-image: url("{{ Vite::asset('../css/images/background.png') }}"); */
     background-repeat: no-repeat;
-    background-size: 100px;
+    background-size: 3px;
     text-align: center;
     min-height: 300px;
-    background-color:red;
+
 }
 
 
