--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -311,6 +311,13 @@ color: #4D525F;
       opacity: 0.3;
     }
 
+    @media (max-width: 576px) {
+      .feature-number {
+        left: 120px;
+      }
+
+    }
+
     .feature-content {
       position: relative;
       z-index: 1;
@@ -455,7 +462,6 @@ font-weight: normal;
 
 
         footer {
-            /* border-top: 1px solid var(--color-ash); */
             background: #004A53;
             text-align: left;
         }
@@ -468,21 +474,6 @@ font-weight: normal;
             color:#fff;
         }
 
-        /* .footer__container .row {
-            font-size: 0.8rem;
-            padding: 0.5rem 0;
-            justify-content: space-between;
-        }
-
-        .footer__container a {
-            text-decoration: none;
-            color: var(--color-bg-ash);
-        }
-
-        .footer__container a:hover {
-            text-decoration: none;
-            color: var(--color-primary-blue);
-        } */
 
 .bg-container-fluid
 {
@@ -492,7 +483,7 @@ font-weight: normal;
     background-repeat: no-repeat;
     background-size: 3px;
     text-align: center;
-    min-height: 300px;
+    min-height: 230px;
     background-size:contain;
     /* background-image: url('../images/background.png'); */
 }
@@ -563,8 +554,9 @@ font-weight: normal;
 .testimonial-card {
   background: #ffe6eb;
   border-radius: 10px;
-  border: 2px dashed #555;
+  /* border: 2px dashed #555; */
   position: relative;
+   transform: rotate(-2deg);
 }
 
 /* Testimonial Image */
@@ -576,4 +568,20 @@ font-weight: normal;
   border: 3px solid #fff;
   object-fit: cover;
 }
+
+/* Default: full width on mobile */
+.custom-width {
+  width: 50%;
+    border: 2px dashed #555;
+    margin-left: 20px;
+
+}
+
+/* Desktop: 25% width */
+@media (min-width: 992px) {
+  .custom-width {
+    width: 35% !important;
+  }
+}
+
 
