--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -24,6 +24,63 @@
         background: #f5f5f5;;
     }
 
+
+    h1
+{
+font-family:  Fredoka, serif;
+font-size:56px;
+line-height:61.6px;
+font-weight: 400;
+font-style: normal;
+color:var(--color-primary-button);
+}
+
+
+h2
+{
+font-family:  Fredoka, serif;
+font-weight: bolder;
+font-size:48px;
+line-height:52.8px;
+color:var(--color-primary-button);
+}
+
+h3
+{
+font-family:  Fredoka, serif;
+font-weight: bolder;
+font-size:40px;
+line-height:44px;
+color:var(--color-primary-button);
+}
+
+h4
+{
+font-family:  Fredoka, serif;
+font-weight: bolder;
+font-size:32px;
+line-height:35.2px;
+color:var(--color-primary-button);
+}
+
+h5
+{
+font-family:  Fredoka, serif;
+font-weight: bolder;
+font-size:24px;
+line-height:26.4px;
+color:var(--color-primary-button);
+}
+
+h6
+{
+font-weight: bolder;
+font-family:  Fredoka, serif;
+font-size:20px;
+line-height:22px;
+color:var(--color-primary-button);
+}
+
     .userbutton
     {
         background: var(--color-primary-button);
@@ -44,33 +101,13 @@
     }
 
 
-.secondaryButton
-{
-padding: 16px 20px;
-width:205px;
-height:60px;
-border-width: 1px;
-border-color:#004A53;
-border-style: solid;
-background: var(--color-secondary-button);
-color: #004A53;
-font-size: 14px;
-margin-top:10px;
-}
-
-.secondaryButton:hover
-{
-    background: var(--color-secondary-hover-button);
-    color: #fff;
-}
-
 .primaryButton
 {
-width: 205px;
-height:60px;
-padding: 16px 20px;
+width: 200px;
+height:50px;
+padding: 10px 6px;
 border-radius:4px;
-background: var(--color-primary-button);
+background: #FDBC47;
 color:#fff;
 font-size: 14px;
 }
@@ -79,13 +116,33 @@ font-size: 14px;
 
 .primaryButton:hover
 {
-    background: var(--color-primary-hover-button);
-    color:#fff;
+    background: #FDBC47;
+    color: #fff;
+}
+
+.secondaryButton
+{
+padding: 10px 6px;
+width:200px;
+height:50px;
+border-width: 1px;
+border-color:#004A53;
+border-style: solid;
+background: var(--color-secondary-button);
+color: #004A53;
+font-size: 14px;
+}
+
+.secondaryButton:hover
+{
+    background: var(--color-secondary-hover-button);
+    color: #fff;
 }
 
 .mysubject
 {
-width:32%;
+width:30%;
+z-index:-1;
 }
 
 @media screen and (max-width: 320px)
@@ -281,7 +338,7 @@ font-size:32px;
     .stat-card{
       background:var(--card-bg);
       border-radius:18px;
-      padding:14px 16px;
+      padding:14px 10px;
       display:flex; justify-content:space-between; align-items:center;
       box-shadow: 0 6px 18px rgba(15,28,36,.04);
       border:1px solid #eef6fa;
@@ -308,7 +365,7 @@ font-size:32px;
     .orb-instructors i{ color:#F59E0B; font-size:20px; }
     .orb-courses i{ color:#EF4444; font-size:20px; }
 
-    .stat-meta .label{ font-size:13px; color:var(--muted); font-weight:700; text-transform:uppercase; letter-spacing:.3px; }
+    .stat-meta .label{ font-size:11px; color:var(--muted); font-weight:700; text-transform:uppercase; letter-spacing:.3px; }
     .stat-meta .value{ font-size:20px; font-weight:800; margin-top:6px; }
 
     /* Chart card */
@@ -1110,3 +1167,29 @@ color:#fff;
                 width: 100%; /* Button takes full width on mobile */
             }
         }
+
+        /* header section */
+        .header-section {
+      background-color: #FFA800;
+      border-bottom-left-radius: 60px;
+      border-bottom-right-radius: 60px;
+      padding: 0.1rem 1rem;
+      color: #fff;
+      position: relative;
+      overflow: hidden;
+      height:200px;
+    }
+
+    .header-section h3 {
+      font-weight: 700;
+      color: #000;
+    }
+
+    .header-section p {
+      color: #222;
+      opacity: 0.9;
+    }
+
+    .header-image {
+      max-width: 350px;
+    }
