--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -81,6 +81,12 @@ line-height:22px;
 color:var(--color-primary-button);
 }
 
+p
+{
+    font: sitka;
+    font-size: 20px;
+}
+
     .userbutton
     {
         background: var(--color-primary-button);
@@ -695,7 +701,7 @@ color:#fff;
             /* Fixed width for desktop view */
             width: 300px;
             /* Ensure it takes full height on large screens */
-            height: 100%;
+            height: 70%;
             position: sticky;
             top: 0;
             padding: 1.5rem 1rem 0;
