--- a/resources/css/access.css
+++ b/resources/css/access.css
@@ -108,17 +108,16 @@
     }
 
 
-    /* Sign In Button */
     .btn-signup-custom
     {
-      background-color: #0F4D46; /* Dark Teal */
+      background-color: #0F4D46;
       border: none;
       border-radius: 8px;
       padding: 14px;
       font-weight: 600;
       color: white;
       font-size: 1.15rem;
-      margin-top: 10px; /* Slight space above button */
+      margin-top: 10px;
        }
    
     .btn-signup-custom:hover {
